@@ -10,6 +10,7 @@
 	* ldns-test-edns: new example tool that detects EDNS support.
 	* fix ldns_resolver_send without openssl.
 	* bugfix #342: patch for support for more CERT key types (RFC4398).
+	* bugfix #351: fix udp_send hang if UDP checksum error.
 
 1.6.7	2010-11-08
 	* EXPERIMENTAL ecdsa implementation, please do not enable on real
